--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+     <meta name="description" content="porfolio dan blog tentang pengalaman dan cerita menarik saya.">
+    <meta property="og:title" content="Noval Hasmi" />
+    <meta property="og:description" content="Portfolio dan blog tentang pengalaman dan cerita menarik saya." />
+    <meta property="og:image" content="https://noval-hasmi.vercel.app/logo.png" />
+    <meta property="og:url" content="https://noval-hasmi.vercel.app" />
+    <meta property="og:type" content="website" />
     <script src="https://unpkg.com/akar-icons-fonts"></script>
     <title>Noval Hasmi</title>
   </head>
