--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <meta name="description" content="porfolio dan blog tentang pengalaman dan cerita menarik saya.">
+    <meta name="google-site-verification" content="6WwhRtHhruCp3eXjUUFKEhwUanHE8YH50mEUQxU2KVE" />
     <meta property="og:title" content="Noval Hasmi" />
     <meta property="og:description" content="Portfolio dan blog tentang pengalaman dan cerita menarik saya." />
     <meta property="og:image" content="https://noval-hasmi.vercel.app/logo.png" />
