--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <link rel="icon" type="image/svg+xml" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="google-site-verification" content="6WwhRtHhruCp3eXjUUFKEhwUanHE8YH50mEUQxU2KVE" />
-    <meta name="description" content="porfolio dan blog tentang pengalaman dan cerita menarik saya.">
+    <meta name="description" content="Portfolio dan blog Noval Hasmi. Berisi pengalaman menarik sebagai front-end developer dan cerita inspiratif di dunia pemrograman.">
     <meta property="og:title" content="Noval Hasmi" />
-    <meta property="og:description" content="Portfolio dan blog tentang pengalaman dan cerita menarik saya." />
+    <meta name="og:description" content="Portfolio dan blog Noval Hasmi. Berisi pengalaman menarik sebagai front-end developer dan cerita inspiratif di dunia pemrograman.">
     <meta property="og:image" content="https://noval-hasmi.vercel.app/logo.png" />
     <meta property="og:url" content="https://noval-hasmi.vercel.app" />
     <meta property="og:type" content="website" />
     <script src="https://unpkg.com/akar-icons-fonts"></script>
-    <title>Noval Hasmi</title>
+    <title>Noval Hasmi - Front-end Developer</title>
   </head>
   <body>
     <div id="root"></div>
